[gd_scene load_steps=14 format=3 uid="uid://b6rpe0fh06qqd"]

[ext_resource type="Script" path="res://mainMenu.gd" id="1_lpwsb"]
[ext_resource type="Texture2D" uid="uid://dgpmyd1cn0eb3" path="res://sprites/bg.png" id="2_1frax"]
[ext_resource type="FontFile" uid="uid://ba8tt4gxqogjq" path="res://addons/fonts/FrancoisOne.ttf" id="4_uu1ny"]
[ext_resource type="Texture2D" uid="uid://bpsppdi8aqpcf" path="res://sprites/Untitled78_20240418014742.png" id="7_4k4ik"]
[ext_resource type="PackedScene" uid="uid://d1am833xdxfcx" path="res://exit_popup.tscn" id="8_8uaj2"]
[ext_resource type="Texture2D" uid="uid://xyoly0ftan1i" path="res://sprites/book.png" id="8_esiel"]
[ext_resource type="Texture2D" uid="uid://nrhf6dop83yu" path="res://sprites/pencil.png" id="9_hkmgr"]
[ext_resource type="FontFile" uid="uid://bnw5ghde11g7m" path="res://addons/fonts/Monoton-Regular.ttf" id="9_r47v4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7bj7x"]
draw_center = false
border_width_bottom = 8
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xb4ja"]
draw_center = false
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_38opk"]
draw_center = false
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_14ap8"]
draw_center = false
border_width_bottom = 4
border_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t3k0n"]
draw_center = false
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)

[node name="mainControl" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lpwsb")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_top = -3.0
offset_right = -3.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_1frax")
expand_mode = 1

[node name="Menu" type="VBoxContainer" parent="Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -466.5
offset_top = -276.0
offset_right = 482.5
offset_bottom = 220.0
grow_horizontal = 2
grow_vertical = 2

[node name="startGame" type="Button" parent="Background/Menu"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.396078, 0, 0.00392157, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0.396078, 0, 0.00392157, 1)
theme_override_colors/font_disabled_color = Color(0.219501, 0.219501, 0.219501, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0.259294, 0.259294, 0.259294, 1)
theme_override_fonts/font = ExtResource("4_uu1ny")
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxFlat_7bj7x")
theme_override_styles/hover = SubResource("StyleBoxFlat_xb4ja")
theme_override_styles/pressed = SubResource("StyleBoxFlat_38opk")
theme_override_styles/disabled = SubResource("StyleBoxFlat_14ap8")
theme_override_styles/focus = SubResource("StyleBoxFlat_t3k0n")
text = "Continue "

[node name="newGame" type="Button" parent="Background/Menu"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.396078, 0, 0.00392157, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0.396078, 0, 0.00392157, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_uu1ny")
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxFlat_7bj7x")
theme_override_styles/hover = SubResource("StyleBoxFlat_xb4ja")
theme_override_styles/pressed = SubResource("StyleBoxFlat_38opk")
theme_override_styles/disabled = SubResource("StyleBoxFlat_14ap8")
theme_override_styles/focus = SubResource("StyleBoxFlat_t3k0n")
text = "New Game"

[node name="settings" type="Button" parent="Background/Menu"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.396078, 0, 0.00392157, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0.396078, 0, 0.00392157, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_uu1ny")
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxFlat_7bj7x")
theme_override_styles/hover = SubResource("StyleBoxFlat_xb4ja")
theme_override_styles/pressed = SubResource("StyleBoxFlat_38opk")
theme_override_styles/disabled = SubResource("StyleBoxFlat_14ap8")
theme_override_styles/focus = SubResource("StyleBoxFlat_t3k0n")
text = "Settings"

[node name="exit" type="Button" parent="Background/Menu"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.396078, 0, 0.00392157, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0.396078, 0, 0.00392157, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_uu1ny")
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxFlat_7bj7x")
theme_override_styles/hover = SubResource("StyleBoxFlat_xb4ja")
theme_override_styles/pressed = SubResource("StyleBoxFlat_38opk")
theme_override_styles/disabled = SubResource("StyleBoxFlat_14ap8")
theme_override_styles/focus = SubResource("StyleBoxFlat_t3k0n")
text = "Exit"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 103.0
offset_right = 2558.0
offset_bottom = 291.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("9_r47v4")
theme_override_font_sizes/font_size = 120
text = "VivaVocabulario"
horizontal_alignment = 1

[node name="Untitled7820240418014742" type="Sprite2D" parent="."]
position = Vector2(1273, 1040)
scale = Vector2(0.837356, 0.836178)
texture = ExtResource("7_4k4ik")

[node name="Book" type="Sprite2D" parent="."]
position = Vector2(482, 667)
texture = ExtResource("8_esiel")

[node name="Pencil" type="Sprite2D" parent="."]
position = Vector2(2181, 667)
rotation = 0.483456
scale = Vector2(0.931111, 0.952869)
texture = ExtResource("9_hkmgr")

[node name="exit_control" parent="." instance=ExtResource("8_8uaj2")]
visible = false
layout_mode = 1

[connection signal="pressed" from="Background/Menu/startGame" to="." method="_on_start_game_pressed"]
[connection signal="button_up" from="Background/Menu/newGame" to="." method="_on_new_game_button_up"]
